# aws-slack-notifier

./: .gitignore  buildspec.yml  package-lock.json  package.json  pyproject.toml  serverless.yml
cfn/resources/: Secret.yml
functions/: cost_explorer.py  credential.py  datetime_range.py  notify_bill.py  slack.py
tests/e2e/: test_daily_report.py
tests/unittests/: test_cost_explorer.py  test_daily.py  test_slack.py
