[tool.poetry]
name = "aws-slack-notifier"
version = "0.1.0"
description = ""
authors = ["Jin SAKUMA <jyori112@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.20.26"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
